--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 	</div>
 	<div id="san">
 		<div class="image">
-			<img src="images/Adi.jpg">
+			<img src="Adi.jpg">
 			<a href="images/CV.pdf" download class ="cv">Download CV</a>
 			
 		</div>
