--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 	<div id="navbar">
 
-		<a href="adithya.html">HOME </a>
+		<a href="index.html">HOME </a>
 		<a href="Education.html">education</a>
 		<a href="Skills.html">Skills</a>
 		<a href="projects.html">Myprojects</a>
