--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 	<div id="san">
 		<div class="image">
 			<img src="Adi.jpg">
-			<a href="images/CV.pdf" download class ="cv">Download CV</a>
+			<a href="CV.pdf" download class ="cv">Download CV</a>
 			
 		</div>
 
